--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,21 +2,24 @@ name: Django CI
 
 on:
   push:
-    branches: [ "main" ]  # Запускать при пуше в ветку main
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]  # Запускать при создании PR в ветку main
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3  # Клонирование репозитория
+    - uses: actions/checkout@v3
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.12'  # Указываем версию Python, как в Dockerfile
+        python-version: '3.12'
+
+    - name: Set up Docker Compose
+      uses: docker/setup-buildx-action@v3
 
     - name: Install dependencies
       run: |
@@ -29,12 +32,12 @@ jobs:
     - name: Run migrations
       run: docker-compose exec django python manage.py migrate
 
-    - name: Run tests (optional)
+    - name: Run tests
       run: docker-compose exec django python manage.py test
 
     - name: Check database connection
       run: docker-compose exec django python manage.py dbshell -c "SELECT 1;"
 
     - name: Stop containers
-      if: always()  # Всегда останавливать контейнеры, даже если были ошибки
+      if: always()
       run: docker-compose down
