--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,10 @@ jobs:
       with:
         python-version: '3.12'
 
-    - name: Set up Docker Compose
-      uses: docker/setup-compose-action@v3
+    - name: Set up Docker Compose (using Buildx)
+      uses: docker/setup-buildx-action@v3
+      with:
+        install: true
 
     - name: Install dependencies
       run: |
@@ -27,17 +29,17 @@ jobs:
         pip install -r requirements.txt
 
     - name: Build and start containers
-      run: docker-compose up -d --build
+      run: docker compose up -d --build # Use 'docker compose' instead of 'docker-compose'
 
     - name: Run migrations
-      run: docker-compose exec django python manage.py migrate
+      run: docker compose exec django python manage.py migrate # Use 'docker compose'
 
     - name: Run tests
-      run: docker-compose exec django python manage.py test
+      run: docker compose exec django python manage.py test # Use 'docker compose'
 
     - name: Check database connection
-      run: docker-compose exec django python manage.py dbshell -c "SELECT 1;"
+      run: docker compose exec django python manage.py dbshell -c "SELECT 1;" # Use 'docker compose'
 
     - name: Stop containers
       if: always()
-      run: docker-compose down
+      run: docker compose down # Use 'docker compose'
