--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,8 @@ services:
       - 8000:8000
     # Зависимость от другого сервиса
     depends_on:
-      - pgdb
+      - pgdb:
+        condition: service_healthy
 
   pgdb:
     # Использование готового образа postgres
