--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - 8000:8000
     # Зависимость от другого сервиса
     depends_on:
-      - pgdb:
+      - pgdb
         
 
   pgdb:
